[package]
name = "ortex"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "ortex"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.32.1"
ort = { version = "2.0.0-rc.2" }
ndarray = "0.15.6"
half = "2.4.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
num-traits = "0.2.18"

[features]
# ONNXRuntime Execution providers
directml = ["ort/directml"]
coreml = ["ort/coreml"]
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
